# Clip-Neural-image-conpression

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README.md
examples/: README.md
src/clip_feature_codec/: __init__.py
src/clip_feature_codec/cli/: encode_images.py  encode_images_dino.py  eval.py  precompute_latents.py  reconstruct_diffusion.py  reconstruct_sd_diffusion.py  search_text.py
src/clip_feature_codec/codecs/: quantizer.py
src/clip_feature_codec/diffusion/: ddim.py  scheduler.py
src/clip_feature_codec/eval/: metrics.py
src/clip_feature_codec/index/: faiss_index.py
src/clip_feature_codec/io/: bitstream.py
src/clip_feature_codec/models/: blocks.py  decoders.py  sd_decoder.py  unet.py
src/clip_feature_codec/train/: diffusion_train.py  sd_diffusion_train.py  train_decoder.py
tests/: test_blocks.py  test_unet.py
